# algomatics

./: .env  .env.example  .gitignore  AGENTS.md  CLAUDE.md  MVP_COMPLETION_SUMMARY.md  QUICK_START_MVP.md  README.md  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  search_cache.json  test_api_connectivity.py  test_e2e.py  test_mvp_e2e.py
backend/: app.py  knowledge_base.json  session_resources.py
backend/agents/: code_generation_agent.py  collaboration_protocol.py  evaluation_agent.py  execution_agent.py  retrieval_agent.py
backend/controller/: collaboration_coordinator.py  controller.py  planning_engine.py  task_parser.py
backend/knowledge/: __init__.py  knowledge_base.py
backend/tests/: README.md  test_agents.py  test_agents_real.py  test_collaboration.py  test_knowledge_base.py  test_multi_turn.py  test_planning_engine.py  test_pre_evaluation.py  test_retrieval_agent.py  test_task_parser.py
docs/: MULTIMODAL_FIX_NOTES.md  MVP_IMPLEMENTATION_REPORT.md  agents-impl.md  api-use.md  biz-impl.md  controller-impl.md  design.md  project-impl.md
docs/0-initial-design/: design.md
docs/1-agentic-update/: 01-system-classification.md  02-dimension-comparison.md  03-iterative-roadmap.md  04-architecture-design.md  05-risks-mitigation.md  06-success-metrics.md  MVP_IMPLEMENTATION_REPORT.md  design.md
frontend/: BACKEND_REQUIREMENTS.md  IMPLEMENTATION_SUMMARY.md  README.md  package.json  pnpm-lock.yaml
frontend/src/: App.css  App.tsx  api.ts  index.css  store.ts  types.ts
output_images/: test_output.txt
ppt/: index.html
(+21 files in other folders)
