[project]
name = "impl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "flask>=2.3.0",
    "matplotlib>=3.7.0",
    "numpy>=1.24.0",
    "openai>=1.0.0",
    "opencv-python>=4.8.0",
    "pillow>=10.0.0",
    "tavily>=0.3.0",
    "werkzeug>=2.3.0",
]
